<?xml version="1.0" encoding="utf-8" standalone="no"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2018 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
...
    <string name="settings">Settings</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>

    <string name="new_option">new…</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="next">Next</string>
    <string name="back">Back</string>

    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="close">Close</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    
    <string name="select_all">Select all</string>
...
    <string name="am_unpack">Unpack</string>
    <string name="am_copy">Copy</string>
    <string name="am_delete">Delete</string>
    <string name="am_rename">Rename</string>
    <string name="am_convert">Convert</string>
    <string name="am_merge">Merge</string>
    <string name="dialog_confirm_delete">You can\'t undo this!</string>

    <string name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string name="backpack">Backpack</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="merge">Merge</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>


...
    <string name="looks">Looks</string>
    <string name="sounds">Sounds</string>
    <string name="nfctags">NFC Tags</string>


    <!-- NewProjectDialog -->
    <string name="new_project_dialog_title">New project</string>
    <string name="new_project_empty">Create an empty project</string>
    <string name="new_project_default">Create an example project</string>
    <string name="new_project_default_drone">Create an example AR.Drone 2.0 project</string>
    <string name="new_project_default_jumping_sumo">Create an example Jumping Sumo project</string>
    <string name="project_orientation_title">Orientation:</string>
    <string name="project_select_screen_title">Screen:</string>
    <!--  -->

    <!-- NewMergedProjectDialog -->
    <string name="new_merge_project_dialog_title">Merged project</string>
    <string name="merging_project_text">These two projects cannot yet be merged</string>
    <!--  -->
...
