...
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<android.support.design.widget.TextInputLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/dialog_content_area_padding_top"
    android:paddingStart="@dimen/dialog_content_area_padding_text_input"
    android:paddingEnd="@dimen/dialog_content_area_padding_text_input"
    app:errorEnabled="true"
...
